Create checkbox template and logic

--- a/complexSystemViewer/viewer/templates/parameters/parameterItems/colorParameter.html
+++ b/complexSystemViewer/viewer/templates/parameters/parameterItems/colorParameter.html
@@ -4,6 +4,6 @@
 
 {% block valueControl %}
 
-<input type="color" paramId="{{param.paramId}}" name="{{param.name}}" value="{{param.hexDefaultValue}}" />
+<input type="color" paramId="{{param.paramId}}" value="{{param.hexDefaultValue}}" />
 
 {% endblock valueControl %}
