--- a/complexSystemViewer/viewer/templates/parameters/parameterItems/numberParameter.html
+++ b/complexSystemViewer/viewer/templates/parameters/parameterItems/numberParameter.html
@@ -4,6 +4,6 @@
 
 {% block valueControl %}
 
-<input type="number" paramId="{{param.paramId}}" name="{{param.name}}" step="{{param.step}}" value="{{param.defaultValue}}" min="{{param.minValue}}" max="{{param.maxValue}}" />
+<input type="number" paramId="{{param.paramId}}" step="{{param.step}}" value="{{param.defaultValue}}" min="{{param.minValue}}" max="{{param.maxValue}}" />
 
 {% endblock valueControl %}
