--- a/complexSystemViewer/viewer/templates/parameters/parameterSwitch.html
+++ b/complexSystemViewer/viewer/templates/parameters/parameterSwitch.html
@@ -7,4 +7,6 @@
     {% include "parameters/parameterItems/selectionParameter.html"%}
 {% elif param.type == "CV" %}
     {% include "parameters/parameterItems/colorParameter.html"%}
+{% elif param.type == "BV" %}
+    {% include "parameters/parameterItems/booleanParameter.html"%}
 {% endif %}
