--- a/complexSystemViewer/viewer/templates/simulationPanel.html
+++ b/complexSystemViewer/viewer/templates/simulationPanel.html
@@ -15,7 +15,7 @@
             {% include "toolBarItems/baseTool.html" %}
         {% endfor %}
     </div>
-    {% include "rulesItem.html" %}
+    {%include "simulationConfigSet.html" %}
 </div>
 <div id="foldSimulationPanelButton" class="foldButton withTransition">
     <svg class="w-6 h-6 text-gray-800 dark:text-white withTransition" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
