--- a/complexSystemViewer/viewer/templates/visualizationPanel.html
+++ b/complexSystemViewer/viewer/templates/visualizationPanel.html
@@ -8,7 +8,7 @@
     {% endfor %}
     {% include "animationItem.html" %}
     <div id="addTransformerItem" class="configurationItem">
-        <h3>Ajouter un nouveau transformer</h3>
+        <h3>Add new transformer</h3>
         <div id="addTransformerForm">
             <select id="transformerTypeSelector">
                 {% for transformerType in model.getTransformerType %}
