--- a/complexSystemViewer/viewer/static/css/simulationPanel.css
+++ b/complexSystemViewer/viewer/static/css/simulationPanel.css
@@ -55,6 +55,7 @@ select#modelSelector {
     background-color: var(--color-light);
     border-radius: 3px;
     transition: background-color 0.1s ease-in-out;
+    padding: 2px;
 }
 
 .tool:hover, .tool.toolActive {
