--- a/complexSystemViewer/viewer/templates/simulationPanel.html
+++ b/complexSystemViewer/viewer/templates/simulationPanel.html
@@ -10,10 +10,16 @@
             {% endfor %}
         </select>
     </div>
-    <div id="toolList" class="simulationItem">
-        {% for tool in toolsList %}
-            {% include "toolBarItems/baseTool.html" %}
-        {% endfor %}
+    <div id="toolMenu">
+        <div id="toolList" class="simulationItem">
+            {% for tool in toolsList %}
+                {% include "toolBarItems/baseTool.html" %}
+            {% endfor %}
+        </div>
+        <div id="toolSettings" class="simulationItem">
+            <input type="range" name="intensity" id="intensitySelectorSetting" min="0" max="1" step="0.01" value="0.5">
+            <input type="range" name="radius" id="radiusSelectorSetting" min="0" max="30" step="1" value="3">
+        </div>
     </div>
     {%include "simulationConfigSet.html" %}
 </div>
