Make settings for each tools

--- a/complexSystemViewer/viewer/templates/index.html
+++ b/complexSystemViewer/viewer/templates/index.html
@@ -19,8 +19,8 @@
     {% include "header.html" %}
 
     <div id="simulator">
-        {% include "simulationPanel.html" %}
+        {% include "simulationPanel/simulationPanel.html" %}
         {% include "canvas.html" %}
-        {% include "visualizationPanel.html"%}
+        {% include "visualizationPanel/visualizationPanel.html"%}
     </div>
 </body>
