--- a/complexSystemViewer/viewer/static/css/simulationPanel.css
+++ b/complexSystemViewer/viewer/static/css/simulationPanel.css
@@ -71,56 +71,77 @@ select#modelSelector {
     display: inline-block;
     width: 54px;
     height: 22px;
-  }
-  
-  .switch input { 
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
-  
-  .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    -webkit-transition: .4s;
-    transition: .4s;
-    border-radius: 34px;
-  }
-  
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 15px;
-    width: 15px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-    border-radius: 50%;
-  }
-  
-  input:checked + .slider {
-    background-color: var(--color-midDark);
-  }
-  
-  input:focus + .slider {
-    box-shadow: 0 0 1px var(--color-midDark);
-  }
-  
-  input:checked + .slider:before {
-    -webkit-transform: translateX(21px);
-    -ms-transform:     translateX(21px);
-    transform:         translateX(21px);
-  }
+}
 
-  #toolMenu {
-    width: 100%;
-    margin: 10px 0px;
-    background-color: var(--color-midDark);
-  }
+.switch input { 
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+  border-radius: 34px;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 15px;
+  width: 15px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+  border-radius: 50%;
+}
+
+input:checked + .slider {
+  background-color: var(--color-midDark);
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px var(--color-midDark);
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(21px);
+  -ms-transform:     translateX(21px);
+  transform:         translateX(21px);
+}
+#toolMenu {
+  width: 100%;
+  margin: 10px 0px;
+  background-color: var(--color-midDark);
+}
+
+#toolMenu h3{
+  margin: 10px 0px;
+  padding-left:10px;
+  color: var(--color-lighter);
+}
+
+#toolSettings {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#toolSettings p {
+  margin: 10px 0px;
+  color: var(--color-light);
+}
+
+.toolParamItem {
+  color: var(--color-lighter);
+  display: flex;
+}
