--- a/complexSystemViewer/viewer/templates/simulationPanel/simulationPanel.html
+++ b/complexSystemViewer/viewer/templates/simulationPanel/simulationPanel.html
@@ -18,7 +18,7 @@
         </div>
         <h3>Tools settings</h3>
         <div id="toolSettings">
-            <p>First select a tool</p>
+            <p>Select a tool</p>
         </div>
     </div>
     {%include "simulationPanel/simulationConfigSet.html" %}
