--- a/complexSystemViewer/viewer/templates/header.html
+++ b/complexSystemViewer/viewer/templates/header.html
@@ -3,21 +3,21 @@
     <h1>ALife Simulator</h1>
 
     <div id="stats">
-        <div id="renderingFps" class="statItem">
+        <h4 id="renderingFps" class="statItem">
             FPS : NaN
-        </div>
-        <div id="totalMs" class="statItem">
+        </h4>
+        <h4 id="totalMs" class="statItem">
             Total : Nan
-        </div>
-        <div id="renderingMs" class="statItem">
+        </h4>
+        <h4 id="renderingMs" class="statItem">
             Rendering : NaN
-        </div>
-        <div id="pickingMs" class="statItem">
+        </h4>
+        <h4 id="pickingMs" class="statItem">
             Picking : Nan
-        </div>
-        <div id="updateMs" class="statItem">
+        </h4>
+        <h4 id="updateMs" class="statItem">
             Update : Nan
-        </div>
+        </h4>
     </div>
 
     <div id="headerAction">
