Update buttonAddTransformer with img instaed of raw svg

--- a/complexSystemViewer/viewer/static/css/visualizationPanel.css
+++ b/complexSystemViewer/viewer/static/css/visualizationPanel.css
@@ -54,7 +54,8 @@
     padding-top: 0px;
 }
 
-#buttonAddTransformer svg {
+#buttonAddTransformer img {
+    color: white;
     width: 30px;
     height: 30px;
 }
