--- a/complexSystemViewer/viewer/templates/visualizationPanel/visualizationPanel.html
+++ b/complexSystemViewer/viewer/templates/visualizationPanel/visualizationPanel.html
@@ -13,17 +13,7 @@
             <select id="transformerTypeSelector">
             </select>
             <button id="buttonAddTransformer">
-                <svg id="addTransformer" width="800px" height="800px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                <g id="Complete">
-                <g id="add-square">
-                <g>
-                <rect data-name="--Rectangle" fill="none" height="20" id="_--Rectangle" rx="2" ry="2" stroke="var(--color-lighter)" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" width="20" x="2" y="2"/>
-                <line fill="none" stroke="var(--color-lighter)" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" x1="15.5" x2="8.5" y1="12" y2="12"/>
-                <line fill="none" stroke="var(--color-lighter)" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" x1="12" x2="12" y1="15.5" y2="8.5"/>
-                </g>
-                </g>
-                </g>
-                </svg>
+                <img id="addTransformer" src="{% static "svg/buttonAddTransformer.svg" %}"/>
             </button>
         </div>
     </div>
