Update tile of page in head of index.html

--- a/complexSystemViewer/viewer/templates/index.html
+++ b/complexSystemViewer/viewer/templates/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/simulationPanel.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/animationItem.css' %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static "css/favicon-16x16.png" %}">
+    <title>ALife Simulator</title>
 </head>
 
 <body>
