Make mesh Panel + bug fix changing mesh on reset

--- a/complexSystemViewer/viewer/static/css/visualizationPanel.css
+++ b/complexSystemViewer/viewer/static/css/visualizationPanel.css
@@ -88,3 +88,10 @@
     padding-left: 5px;
     border-left: solid var(--color-light) 1px;
 }
+
+
+.centerSelect {
+    display: flex;
+    justify-content: center;
+    margin: 10px;
+}
