--- a/complexSystemViewer/viewer/templates/visualizationPanel/animationItem.html
+++ b/complexSystemViewer/viewer/templates/visualizationPanel/animationItem.html
@@ -1,6 +1,6 @@
 <div id="animationItem" class="configurationItem">
     <h2>Animation</h2>
-    <div id="animableSelectContainer">
+    <div id="animableSelectContainer" class="centerSelect">
         <select id="animableSelect"></select>
     </div>
     <div id="animationFunctionsGrid"></div>
