--- a/complexSystemViewer/viewer/templates/header.html
+++ b/complexSystemViewer/viewer/templates/header.html
@@ -24,7 +24,7 @@
         <button id="buttonPlay">
             <img src="{% static "svg/buttonPlay.svg" %}" title="Play"/>
         </button>
-        <button id="buttonPause">
+        <button id="buttonPause" class="active">
             <img src="{% static "svg/buttonPause.svg" %}" title="Pause"/>
         </button>
         <button id="buttonReset">
