--- a/complexSystemViewer/viewer/templates/canvas.html
+++ b/complexSystemViewer/viewer/templates/canvas.html
@@ -1,5 +1,9 @@
 {% load static %}
 <canvas id="c" width= "640" height="480"></canvas>
 
+<p id="transformationTimer" hidden=true ></p>
+<p id="parsingTimer" hidden=true ></p>
+<p id="receivingTimer" hidden=true ></p>
+
 <script src="{% static 'js/index.js' %}" type="module"></script>
 {% comment %} <canvas> CANVA </canvas> {% endcomment %}
