--- a/complexSystemViewer/viewer/templates/simulationPanel/simulationPanel.html
+++ b/complexSystemViewer/viewer/templates/simulationPanel/simulationPanel.html
@@ -10,6 +10,7 @@
             {% endfor %}
         </select>
     </div>
+    {% include "simulationPanel/tool/selectionInteraction.html"%}
     <div id="toolMenu" class="simulationItem">
         <div id="toolList" class="simulationItem">
             {% for tool in toolsList %}
